# external_duktape

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
duktape/: duk_config.h  duktape.c
resources/duktape_161_cmake/: CMakeLists.txt
test/: CMakeLists.txt  duktape_test.cpp
